chore: update requirements for Streamlit deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-seaborn
-pandas
-matplotlib
-numpy
-scikit-learn
-plotly 
 streamlit
-pytest
-pathlib
+pandas
+numpy
+plotly
 statsmodels
-altair.vegalite.v4
+scikit-learn
+matplotlib
+seaborn
+altair
